# brave-search-lab

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ziaRJLri
.github/workflows/: ci.yml
examples/: demo.py
src/bravelab/: __init__.py  api.py  cache.py  cli.py  client.py  models.py  monitor.py  rag.py
tests/: conftest.py  test_client.py  test_monitor.py  test_operators.py  test_rag.py
